[package]
name = "antz"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 2

[dependencies]
ggez = "0.5.1"
hecs = "0.3.1"
rand = "0.7.3"
serde = { version="1.0.0", features=["derive"] }
toml = "0.5.7"
