[package]
name = "antz"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 2

[dependencies]
anyhow = "1.0.75"
extism = "^1.0.0-rc3"
hecs = "0.10.4"
notan = { version = "0.11.0", features = ["notan_egui", "egui", "serde", "drop_files"] }
rand = "0.8.5"
serde = { version="1.0.0", features=["derive"] }
toml = "0.8.8"
