[package]
name = "antz"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
extism = "1.0.0-rc6"
hecs = "0.10.4"
log = "0.4.20"
notan = { version = "0.11.0", features = ["notan_egui", "egui", "serde", "drop_files"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
antz-aux = { path = "../antz_aux" }
clap = { version = "4.4.11", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
